@@ -1,1 +1,2 @@
 --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+--add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
