@@ -79,6 +79,8 @@
                     <options>
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                     </options>
                 </configuration>
             </plugin>
