@@ -16,5 +16,6 @@ fi
 
 # Run with required JVM arguments for JavaFX WebView
 java --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED \
+     --add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED \
      -cp target/classes \
      com.eb.ui.cli.MainApp "$@"
